--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
 </head>
 <body>
     <ul id="cat-list"></ul>
-    <div id="cat">
+        <ul data-bind="foreach: catList">
+            <li data-bind="text: name, click: $parent.setCurrentCat"></li>
+        </ul>
 
+    <div id="cat" data-bind="with: currentCat">
         <h2 id="cat-name" data-bind="text: name"></h2>
         <h3 id="cat-level" data-bind="text: level">level here</h3>
         <div id="cat-count" data-bind="text: clickCount"></div>
-        <img id="cat-img" src="" alt="cute cat" data-bind="click: incrementCounter, attr: {src: imgSrc}">
-
+        <img id="cat-img" src="" alt="cute cat" data-bind="click: $parent.incrementCounter, attr: {src: imgSrc}">
+        <ul data-bind="foreach: nicknames">
+            <li data-bind="text: $data"></li>
+        </ul>
     </div>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/app.js"></script>
